objects/MuleSoft_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MuleSoft Error Logs</relationshipLabel>
        <relationshipName>MuleSoft_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Version_Id__c</fullName>
        <label>Content Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MuleSoft Error Log</label>
    <nameField>
        <displayFormat>MS-{000000000}</displayFormat>
        <label>MuleSoft Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MuleSoft Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>